src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Adoption_Reason__c</fullName>
        <label>Adoption Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assistances_from_SFDC__c</fullName>
        <label>Assistances from SFDC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Best Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_Email__c</fullName>
        <label>CSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_PO_from_Customer__c</fullName>
        <label>Expected PO from Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Amount__c</fullName>
        <formula>if( ISNULL(Amount__c),0.0,Amount__c* Margin_Percentage__c)</formula>
        <label>Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Percentage__c</fullName>
        <label>Margin Percentage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_steps__c</fullName>
        <label>Next steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_License__c</fullName>
        <label>No, of License</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Omitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability (%)</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>10%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Accepted_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Accepted By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closed_Lost__c</fullName>
        <label>Reason for Closed Lost</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <defaultValue>&quot;EXTENTOR SOLUTIONS PVT LTD&quot;</defaultValue>
        <label>Reseller</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Forecast_Count__c</fullName>
        <label>Resource Forecast Count</label>
        <summaryForeignKey>Resource_Forecast__c.Deal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salesforce_AE__c</fullName>
        <label>Salesforce AE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id. Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perception Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TLP__c</fullName>
        <label>TLP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <label>Total Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_Licenses__c</fullName>
        <label>Total Price(Licenses)</label>
        <summarizedField>Deal_Item__c.Total_Price_Licenses__c</summarizedField>
        <summaryForeignKey>Deal_Item__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price_Services__c</fullName>
        <label>Total Price(Services)</label>
        <summarizedField>Deal_Item__c.Total_Price_Services__c</summarizedField>
        <summaryForeignKey>Deal_Item__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utilization_score__c</fullName>
        <label>Utilization score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <columns>Probability__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Won_Services_Deals_Open</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>Customer__c</columns>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Probability__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Total_Price_Services__c</columns>
        <columns>Next_steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Services</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>All Closed Won Services Deals</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Deals</fullName>
        <columns>Customer__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Probability__c</columns>
        <columns>Salesforce_AE__c</columns>
        <columns>Type__c</columns>
        <columns>Next_steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Close Dropped</value>
        </filters>
        <label>All Open Deals</label>
    </listViews>
    <listViews>
        <fullName>License_Deals</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Customer__c</columns>
        <columns>Total_Price_Licenses__c</columns>
        <columns>Stage__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Licenses</value>
        </filters>
        <label>License Deals</label>
    </listViews>
    <listViews>
        <fullName>Service_Deals</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Customer__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Services</value>
        </filters>
        <label>Service Deals</label>
    </listViews>
    <listViews>
        <fullName>Today_s</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Amount__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <recordTypes>
        <fullName>Licenses</fullName>
        <active>true</active>
        <label>Licenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <label>Services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Same_Opportunity_can_be_only_one</fullName>
        <active>false</active>
        <description>Same Opportunity cannot be commit, Best case &amp; Omitted.</description>
        <errorConditionFormula>If(Best_Case__c==True &amp;&amp; (Commit__c ||Omitted__c ),True,
If(Commit__c==True &amp;&amp; (Best_Case__c ||Omitted__c ),True,
If(Omitted__c==True &amp;&amp; (Best_Case__c || Commit__c ),True,
False)))</errorConditionFormula>
        <errorMessage>Only One CheckBox (Commit,Best Case or Omitted) Can be true at a time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Startdate_should_be_greater_than_Enddate</fullName>
        <active>false</active>
        <errorConditionFormula>Deal_Start_Date__c  &gt; Deal_End_Date__c</errorConditionFormula>
        <errorDisplayField>Deal_Start_Date__c</errorDisplayField>
        <errorMessage>Contract Start Date:Contract Start Date should be lessthan Contract End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Contract_Start_Date</fullName>
        <active>false</active>
        <description>Validation on Contract Start Date, when Deal is closed Won.</description>
        <errorConditionFormula>if(AND(RecordType.DeveloperName=&apos;Licenses&apos;, ISPICKVAL(Stage__c,&quot;Closed Won&quot;)),
ISBLANK(Deal_Start_Date__c),false)</errorConditionFormula>
        <errorDisplayField>Deal_Start_Date__c</errorDisplayField>
        <errorMessage>Once Deal is Closed won, Contract Start Date is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Deal_Stage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Stage__c ,&quot;Closed Won&quot;), Quote_Accepted_By_Customer__c =false)</errorConditionFormula>
        <errorDisplayField>Quote_Accepted_By_Customer__c</errorDisplayField>
        <errorMessage>We cannot close deal without customer accepting quote</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Stage_Probability</fullName>
        <active>false</active>
        <description>If Probability is &gt;70%,then atleast one resource should be allocated(In Resource Forecast 1 record should be created )</description>
        <errorConditionFormula>if(AND( Deal_Type__c=&apos;Services&apos;,OR( ISPICKVAL( Stage__c , &apos;Proposal/Price Quote&apos;), ISPICKVAL(Stage__c, &apos;Negotiation/Review&apos;),ISPICKVAL(Stage__c, &apos;Closed Won&apos;))),Resource_Forecast_Count__c = 0,false)</errorConditionFormula>
        <errorMessage>If Probability is &gt;70% ,then atleast one Resource should be allocated to the Deal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Total_Estimated_Hours</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(RecordType.DeveloperName=&apos;Services&apos;, Quote_Accepted_By_Customer__c =true), ISBLANK( Total_Estimated_Hours__c ) , false)</errorConditionFormula>
        <errorDisplayField>Total_Estimated_Hours__c</errorDisplayField>
        <errorMessage>Once Quote is accepted by Customer, Total Estimated Hours should be mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_stage_closed_lost</fullName>
        <active>false</active>
        <description>When the stage is &quot;Closed lost &quot;, the  field &quot;reason for the lost &quot; should not be empty</description>
        <errorConditionFormula>AND(ISPICKVAL( Stage__c , &quot;Closed Lost&quot;), ISBLANK( Reason_for_Closed_Lost__c  ) )</errorConditionFormula>
        <errorDisplayField>Reason_for_Closed_Lost__c</errorDisplayField>
        <errorMessage>When the stage is &quot;Closed lost &quot;, the  field &quot;reason for the lost &quot; should not be empty</errorMessage>
    </validationRules>
</CustomObject>